<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WarningActivity">

    <TextView
        android:id="@+id/textWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="45dp"
        android:text="@string/text_defaut_pompe"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textWarningMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textWarningMessage"
        android:layout_width="374dp"
        android:layout_height="238dp"
        android:layout_marginTop="45dp"
        android:maxLines="14"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/text_warning_message1"
        android:textSize="14sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textWarning" />

    <Button
        android:id="@+id/buttonReturn"
        android:layout_width="182dp"
        android:layout_height="48dp"
        android:layout_marginStart="137dp"
        android:layout_marginLeft="137dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="137dp"
        android:layout_marginRight="137dp"
        android:text="@string/text_defaut_cor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textWarningMessage" />
</androidx.constraintlayout.widget.ConstraintLayout>